fix some dark mode issues

--- a/src/app.css
+++ b/src/app.css
@@ -104,9 +104,16 @@
   * {
     border-color: rgb(229, 231, 235);
   }
+  
   body {
-    background-color: white;
-    color: rgb(17, 24, 39);
+    background-color: var(--background);
+    color: var(--foreground);
+  }
+  
+  html.dark,
+  html.dark body {
+    background-color: var(--background);
+    color: var(--foreground);
   }
 }
 
